<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fg_bg_s"
        android:orientation="vertical" >

        <include
            android:id="@id/header_login_input"
            layout="@layout/dialog_header" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/string_forget_title"
            android:textColor="@color/black"
            android:textSize="@dimen/sdk_main_text_size" />

        <EditText
            android:id="@id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/fg_input"
            android:drawableLeft="@drawable/fg_email"
            android:drawablePadding="3dp"
            android:hint="@string/string_forget_hint_email"
            android:padding="5dp"
            android:textSize="@dimen/sdk_main_text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:background="@drawable/fg_input"
                android:drawableLeft="@drawable/fg_code"
                android:drawablePadding="3dp"
                android:hint="@string/string_forget_hint_code"
                android:padding="5dp"
                android:textSize="@dimen/sdk_main_text_size" />

            <Button
                android:id="@id/btn_code_get"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.4"
                android:background="@drawable/fg_forget_btn"
                android:text="@string/string_forget_btn_text"
                android:textColor="@color/hw_forget_btn_color"
                android:textSize="@dimen/sdk_main_text_size" />
        </LinearLayout>

        <Button
            android:id="@id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/sdk_login_margin_top"
            android:background="@drawable/fg_btn_green"
            android:text="@string/string_forget_btn_next"
            android:textColor="@color/white" />
    </LinearLayout>

    <include
        android:id="@id/loading"
        layout="@layout/layout_loading"
        android:visibility="gone" />

</FrameLayout>