<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fg_guest_find_uid"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_game_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sdk_main_text_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="152dp"
        android:gravity="center_horizontal"
        android:text="@string/string_guest_find_game_name" />

    <TextView
        android:id="@+id/tv_uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:text="@string/string_guest_uid_test"
        android:textSize="@dimen/sdk_main_text_size" />

    <TextView
        android:id="@+id/tv_reply_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_uid"
        android:layout_marginTop="62dp"
        android:gravity="center_horizontal"
        android:text="@string/string_guest_reply_code"
        android:textSize="@dimen/sdk_main_text_size" />

</RelativeLayout>
