<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fg_bg_s"
        android:orientation="vertical" >

        <include
            android:id="@id/header_login_input"
            layout="@layout/dialog_header" />

        <EditText
            android:id="@id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sdk_login_margin_right"
            android:background="@drawable/fg_input_big"
            android:drawableLeft="@drawable/fg_account"
            android:drawablePadding="@dimen/sdk_drawable_padding"
            android:hint="@string/string_id"
            android:paddingLeft="10dp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@id/et_psd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/sdk_login_margin_right"
                android:background="@drawable/fg_input_big"
                android:drawableLeft="@drawable/fg_password"
                android:drawablePadding="@dimen/sdk_drawable_padding"
                android:hint="@string/string_psd"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >
            </EditText>

            <ImageButton
                android:id="@id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:layout_marginRight="23dp"
                android:background="@drawable/fg_clear_n" />
        </FrameLayout>

        <CheckBox
            android:id="@id/cb_allow_policy"
            style="@style/CustomCheckboxTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginLeft="15dp"
            android:padding="5dp"
            android:text="@string/string_allow_policy"
            android:textColor="@color/black"
            android:textSize="@dimen/sdk_main_text_size" />

        <Button
            android:id="@id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/sdk_login_margin_top"
            android:background="@drawable/fg_btn_green"
            android:text="@string/string_btn_login"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@id/tv_forget_psd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="23dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/string_forget_psd"
                android:textColor="@color/black"
                android:textSize="@dimen/sdk_main_text_size" />

            <TextView
                android:id="@id/tv_find_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="23dp"
                android:layout_marginRight="10dp"
                android:text="@string/string_try_id"
                android:textColor="@color/black"
                android:textSize="@dimen/sdk_main_text_size" />
        </LinearLayout>
    </LinearLayout>

     <include
            android:id="@id/loading"
            layout="@layout/layout_loading"
            android:visibility="gone" />
    
</FrameLayout>